<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddActivity">

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="292dp"
        android:layout_height="237dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder"
        android:contentDescription="@string/image_placeholder"/>

    <Button
        android:id="@+id/buttonCamera"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/camera"
        android:backgroundTint="@color/navi"
        app:layout_constraintEnd_toStartOf="@+id/buttonGallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewImage" />

    <Button
        android:id="@+id/buttonGallery"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/gallery"
        android:backgroundTint="@color/navi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCamera"
        app:layout_constraintTop_toBottomOf="@+id/previewImage" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="81dp"
        android:layout_height="29dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/description"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGallery" />

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="177dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/black"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="317dp"
        android:layout_height="146dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/write_your_description"
        android:inputType="textMultiLine"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>