<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp"
    tools:context=".ui.main.ListStoryAdapter">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="431dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="347dp"
            android:layout_height="203dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/image_story"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0"
            tools:src="@tools:sample/avatars" />


        <TextView
            android:id="@+id/tvName"
            android:layout_width="92dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/imgAvatar"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.497"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/imgAvatar"
            card_view:layout_constraintVertical_bias="0.077"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="293dp"
            android:layout_height="78dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/imgAvatar"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tvName"
            card_view:layout_constraintVertical_bias="0.23"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="92dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/imgAvatar"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tvDescription"
            card_view:layout_constraintVertical_bias="0.23"
            tools:text="date" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>